--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_HOST=smtp.gmail.com
 MAIL_USER=awipratama05122006@gmail.com
-MAIL_PASS=awi051206
-MAIL_PORT=2525
+MAIL_PASS=qtrv dzrr kouw cmhw
+MAIL_PORT=587
