--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
-MAIL_HOST=sandbox.smtp.mailtrap.io
-MAIL_USER=6c09bbdeec36f4
-MAIL_PASS=c6de2f57c4a348
+MAIL_HOST=smtp.gmail.com
+MAIL_USER=awipratama05122006@gmail.com
+MAIL_PASS=qtrv dzrr kouw cmhw
 MAIL_PORT=587
 MAIL_SECURE=false
 APP_PORT=3000
