--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 MAIL_HOST=smtp.gmail.com
-MAIL_USER=awipratama05122006@gmail.com
-MAIL_PASS=qtrv dzrr kouw cmhw
+MAIL_USER=not found
+MAIL_PASS=not found
 MAIL_PORT=587
 MAIL_SECURE=false
-APP_PORT=3000
+APP_PORT=2837918273
